fixed subtitle spacing

--- a/Notes/style.css
+++ b/Notes/style.css
@@ -68,6 +68,7 @@ h1 {
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 	transition: all .15s ease-in-out;
 	padding:0;
+	margin-top:0;
 }
 
 .firstdiv {
